--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8567,6 +8567,26 @@ section.lazy-placeholder:after {
 .cid-saDe2q80If .mbr-section-title {
   color: #ffffff;
 }
+.cid-saHmWPjOpz {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-saHmWPjOpz h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-saHmWPjOpz p {
+  color: #767676;
+  text-align: left;
+}
+.cid-saHmWPjOpz .card-box {
+  padding-top: 2rem;
+}
+.cid-saHmWPjOpz .card-wrapper {
+  height: 100%;
+}
 .cid-saDe2s3aaW {
   padding-top: 30px;
   padding-bottom: 30px;
