--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7825,6 +7825,20 @@ section.lazy-placeholder:after {
 .cid-saD6epa9eo H2 {
   color: #ffffff;
 }
+#custom-html-67 {
+  /* Type valid CSS here */
+}
+#custom-html-67 div {
+  padding: 0px ;
+  color: #777;
+  text-align: center;
+  background-color: #849ea3;
+  color: #ffffff;
+}
+#custom-html-67 p {
+  font-size: 60px;
+  color: white;
+}
 .cid-saD2ksXVO0 {
   padding-top: 90px;
   padding-bottom: 90px;
