new promo and fixes

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9855,7 +9855,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-sdr4YH1pnl {
-  background-image: url("../../../assets/images/web-ghost.png");
+  background-image: url("../../../assets/images/bcs-3.jpg");
 }
 .cid-sdr4YHzJT4 {
   padding-top: 90px;
