--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1065,7 +1065,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rRQAquKE0v {
-  background-image: url("../../../assets/images/laptop.png");
+  background-image: url("../../../assets/images/bcschristmasbanner.png");
 }
 .cid-sa22y8jY5g {
   padding-top: 90px;
